@@ -1,0 +1,45 @@
+package com.mapfinal.geometry;
+
+public class ScreenRect {
+
+	protected ScreenPoint p1;
+	protected ScreenPoint p2;
+	protected ScreenPoint p3;
+	protected ScreenPoint p4;
+	
+	public ScreenRect(ScreenPoint p1, ScreenPoint p2, ScreenPoint p3, ScreenPoint p4) {
+	}
+
+	public ScreenPoint getP1() {
+		return p1;
+	}
+
+	public void setP1(ScreenPoint p1) {
+		this.p1 = p1;
+	}
+
+	public ScreenPoint getP2() {
+		return p2;
+	}
+
+	public void setP2(ScreenPoint p2) {
+		this.p2 = p2;
+	}
+
+	public ScreenPoint getP3() {
+		return p3;
+	}
+
+	public void setP3(ScreenPoint p3) {
+		this.p3 = p3;
+	}
+
+	public ScreenPoint getP4() {
+		return p4;
+	}
+
+	public void setP4(ScreenPoint p4) {
+		this.p4 = p4;
+	}
+	
+}
