@@ -1,0 +1,10 @@
+package com.mapfinal.map;
+
+import java.util.List;
+
+import com.mapfinal.geometry.ScreenRect;
+
+public class MarkerRules {
+
+	protected List<ScreenRect> rects;
+}
